--- a/index.html
+++ b/index.html
@@ -14,6 +14,65 @@
         button:hover { background-color: #218838; }
         .result { margin-top: 20px; padding: 10px; background-color: #f8f9fa; border: 1px solid #ddd; }
     </style>
+    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+    <style>
+    :root {
+    --bg: #fff;
+    --accent-bg: #f5f7ff;
+    --text: #333;
+    --text-light: #585858;
+    --border: #c0c0c0;
+    --accent: #3c9700;
+    --accent-hover:#286400;
+    --accent-light: yellow;
+    --code: #d81b60;
+    --preformatted: #444;
+    --marked: #ffdd33;
+    --disabled: #efefef;
+  }
+  body {
+    grid-template-columns: 1fr min(36rem, 90%) 1fr;
+  }
+  #outputArea {
+    margin: 1rem 0;
+    display: grid;
+  }
+  #inputArea {
+    display: grid;
+  }
+  label {
+      font-size: small;
+      padding: 0 0 .25rem .15rem;
+  }
+  label > span {
+      font-weight: bold;
+  }
+  input, textarea {
+    margin: 0 0 1rem 0;
+    font-size: initial;
+    height: 3rem;
+  }
+  textarea {
+    font-family: monospace; 
+    min-height: 15rem;
+  }      
+  button {
+    height: 3rem;
+    border-radius: 100rem;
+    font-weight: bold;
+  }
+::placeholder {
+    font-size: initial;
+    color: #c0c0c0;
+}
+
+    @media (min-width: 600px) {
+      .video-h2 { 
+        font-size: var(--z-font-size-xl);
+       }
+    }
+
+    </style>    
 </head>
 <body>
 
