--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         input { width: 100%; padding: 8px; margin-top: 5px; }
         button { padding: 10px; background-color: #28a745; color: white; border: none; width: 100%; }
         button:hover { background-color: #218838; }
-        .result { margin-top: 20px; padding: 10px; background-color: #f8f9fa; border: 1px solid #ddd; }
+        .result { margin-top: 20px; padding: 10px 20px; background-color: #f8f9fa; border: 1px solid #ddd; border-radius: 1rem; }
     </style>
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
     <style>
