--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
   
   p > span {
     background-color: blue;
-    border-radius: 1rem;
-    padding: 2px 4px;
+    border-radius: .25rem;
+    padding: 4px 6px;
+    font-size: small;
+    font-weight: bold;
+    color: white;
   }
         
   label > span {
