--- a/index.html
+++ b/index.html
@@ -93,18 +93,18 @@
     </p>
 
     <div class="form-group">
-        <label for="days">Number of Days (including weekends):</label>
-        <input type="number" id="days" placeholder="e.g. 7">
+        <label for="days">Days (including weekends)</label>
+        <input type="number" id="days" placeholder="e.g. 7d">
     </div>
 
     <div class="form-group">
-        <label for="extraHours">Extra Hours:</label>
-        <input type="number" id="extraHours" placeholder="e.g. 1">
+        <label for="extraHours">Hours</label>
+        <input type="number" id="extraHours" placeholder="e.g. 1h">
     </div>
 
     <div class="form-group">
-        <label for="extraMinutes">Extra Minutes:</label>
-        <input type="number" id="extraMinutes" placeholder="e.g. 43">
+        <label for="extraMinutes">Minutes</label>
+        <input type="number" id="extraMinutes" placeholder="e.g. 43m">
     </div>
 
     <button onclick="calculateHours()">Calculate Work Hours</button>
