--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     --text: #333;
     --text-light: #585858;
     --border: #c0c0c0;
-    --accent: #3c9700;
+    --accent: #ffd633;
     --accent-hover:#286400;
     --accent-light: yellow;
     --code: #d81b60;
@@ -70,6 +70,7 @@
     height: 3rem;
     border-radius: 100rem;
     font-weight: bold;
+    color: var(--text); 
   }
 ::placeholder {
     font-size: initial;
