--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     --text-light: #585858;
     --border: #c0c0c0;
     --accent: #ffd633;
-    --accent-hover:#286400;
+    --accent-hover:#e8c32e;
     --accent-light: yellow;
     --code: #d81b60;
     --preformatted: #444;
