--- a/index.html
+++ b/index.html
@@ -94,18 +94,18 @@
     </p>
 
     <div class="form-group">
-        <label for="days">Days (including weekends)</label>
-        <input type="number" id="days" placeholder="e.g. 7d">
+        <label for="days">Days (d)</label>
+        <input type="number" id="days" placeholder="e.g. 7">
     </div>
 
     <div class="form-group">
-        <label for="extraHours">Hours</label>
-        <input type="number" id="extraHours" placeholder="e.g. 1h">
+        <label for="extraHours">Hours (h)</label>
+        <input type="number" id="extraHours" placeholder="e.g. 1">
     </div>
 
     <div class="form-group">
-        <label for="extraMinutes">Minutes</label>
-        <input type="number" id="extraMinutes" placeholder="e.g. 43m">
+        <label for="extraMinutes">Minutes (m)</label>
+        <input type="number" id="extraMinutes" placeholder="e.g. 43">
     </div>
 
     <button onclick="calculateHours()">Calculate Work Hours</button>
