--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   }
   
   p > span {
-    background-color: blue;
+    background-color: #0052cc;
     border-radius: .25rem;
     padding: 4px 6px;
     font-size: small;
